Name:		    hoodle-manage
Version:	    0.0
Synopsis:	    hoodle file management
Description: 	hoodle file management wiht sqlite backend 
Homepage:       http://ianwookim.org/hoodle
License: 	    GPL-3
License-file:	LICENSE
Author:		    Ian-Woo Kim
Maintainer: 	Ian-Woo Kim <ianwookim@gmail.com>
Category:       Application
Tested-with:    GHC == 7.8
Build-Type: 	Custom
Cabal-Version:  >= 1.8
data-files:     
Source-repository head
  type: git
  location: http://www.github.com/wavewave/hoodle


Library
  hs-source-dirs: src
  ghc-options: 	-Wall  -funbox-strict-fields -fno-warn-unused-do-bind -fno-warn-orphans 
  ghc-prof-options: -caf-all -auto-all

  Build-Depends:   base == 4.*, 
                   conduit,
                   esqueleto,
                   monad-control,
                   monad-logger,
                   persistent,
                   persistent-sqlite,
                   persistent-template,
                   resourcet,
                   text,
                   transformers,
                   uuid

  Exposed-Modules: 
                   Hoodle.Manage
                   Hoodle.Manage.Type.UUID
  Other-Modules: 
  c-sources: 
  include-dirs:    
  install-includes: 
  cc-options:      
  extra-libraries: 
