Name:		hoodle-parser
Version:	0.4
Synopsis:       Hoodle file parser
Description: 	Text parser for hoodle xml file
Homepage:       http://ianwookim.org/hoodle
License: 	BSD3
License-file:	LICENSE
Author:		Ian-Woo Kim
Maintainer: 	Ian-Woo Kim <ianwookim@gmail.com>
Category:       Text
Build-Type: 	Simple
Cabal-Version:  >= 1.8
Source-repository head
  type: git
  location: http://www.github.com/wavewave/hoodle-parser


Library
  hs-source-dirs: src
  ghc-options: 	-Wall -funbox-strict-fields -fno-warn-unused-do-bind
  ghc-prof-options: -caf-all -auto-all
  Build-Depends: base == 4.*, 
                 attoparsec >= 0.10, 
                 either >= 3.1,
                 bytestring >= 0.9, 
                 containers >= 0.4, 
                 directory, 
                 hoodle-types >= 0.4, 
                 lens >= 2.5, 
                 mtl > 2, 
                 strict >= 0.3, 
                 text >= 0.11,
                 transformers >= 0.3, 
                 xournal-types >= 0.5.1

  Exposed-Modules: 
                   Text.Hoodle.Migrate.FromXournal
                   Text.Hoodle.Migrate.V0_1_1_to_V0_2_2
                   Text.Hoodle.Migrate.V0_2_2_to_V0_3
                   Text.Hoodle.Migrate.V0_3_to_HEAD
                   Text.Hoodle.Parse.Attoparsec
                   Text.Hoodle.Parse.Attoparsec.V0_1_1
                   Text.Hoodle.Parse.Attoparsec.V0_2_2
                   Text.Hoodle.Parse.Attoparsec.V0_3
                   Text.Hoodle.Parse.Util
                   Text.Hoodle.Parse.Zlib
                   Text.Hoodlet.Parse.Attoparsec


 
		 
