Name:		hoodle-publish
Version:	0.2
Synopsis:	publish hoodle files as a static web site
Description: 	This package provieds a simple tool hoodle-publish which make a static web site from a directory containing hoodle files
Homepage:       http://ianwookim.org/hoodle
License: 	GPL-3
License-file:	LICENSE
Author:		Ian-Woo Kim
Maintainer: 	Ian-Woo Kim <ianwookim@gmail.com>
Category:       Application
Tested-with:    GHC == 7.8
Build-Type: 	Simple
Cabal-Version:  >= 1.8
data-files:     
Source-repository head
  type: git
  location: http://www.github.com/wavewave/hoodle-publish

Flag Gtk3
  Description:     compile with gtk3
  Default:         False 

Library
  hs-source-dirs:  lib
  ghc-options: 	    -Wall  -funbox-strict-fields -fno-warn-unused-do-bind -fno-warn-orphans 
  ghc-prof-options: -caf-all -auto-all
  Build-Depends:   
                   base == 4.*, 
                   --
                   attoparsec >= 0.10,
                   bytestring >= 0.9, 
                   cairo > 0.12,
                   containers >= 0.4,
                   directory > 1,
                   directory-tree, 
                   filepath > 1, 
                   hoodle-parser >= 0.3.0,
                   hoodle-render >= 0.3.1,
                   hoodle-types >= 0.3.0,
                   HTTP,
                   io-streams, 
                   lens >= 2.5,
                   mtl > 2,
                   network-uri > 2.6,
                   pdf-toolbox-core >= 0.0.3, 
                   pdf-toolbox-document >= 0.0.3, 
                   process >= 1.1, 
                   transformers >= 0.3,
                   unordered-containers,
                   uuid >= 1.2.7 
  if flag(gtk3) 
    Build-depends: gtk3 > 0.13 
  else 
    Build-depends: gtk > 0.13


  Exposed-modules: 
                   Hoodle.Publish.PDF

Executable hoodle-publish
  Main-is: hoodle-publish.hs
  hs-source-dirs: exe
  ghc-options: 	-Wall -funbox-strict-fields -fno-warn-unused-do-bind -fno-warn-orphans
  ghc-prof-options: -caf-all -auto-all

  Build-Depends:   base == 4.*,
                   cmdargs,
                   directory,
                   directory-tree, 
                   filepath,
                   hoodle-publish
  if flag(gtk3) 
    Build-depends: gtk3 > 0.13 
  else 
    Build-depends: gtk > 0.13
