Name:		hoodle-render
Version:	0.4
Synopsis:       Hoodle file renderer
Description: 	Rendering library using cairo for hoodle file format
License: 	GPL-3
License-file:	LICENSE
Author:		Ian-Woo Kim
Maintainer: 	Ian-Woo Kim <ianwookim@gmail.com>
Category:       Graphics
Build-Type: 	Simple
Cabal-Version:  >= 1.8
data-files:     CHANGES
Source-repository head
  type: git
  location: http://www.github.com/wavewave/hoodle-render

Library
  hs-source-dirs: src
  ghc-options: 	-Wall -fno-warn-orphans -funbox-strict-fields -fno-warn-unused-do-bind
  ghc-prof-options: -caf-all -auto-all

  Build-Depends: 
                 base == 4.*, 
                 base64-bytestring >= 0.1, 
                 bytestring >= 0.9,
                 cairo >= 0.12, 
                 containers >= 0.4, 
                 directory, 
                 filepath, 
                 gd >= 3000.7,  
                 gtk >= 0.12,
                 hoodle-types >= 0.3,
                 lens >= 2.5, 
                 monad-loops >= 0.3,  
                 mtl == 2.*, 
                 poppler >= 0.12.2.2,
                 stm,
                 strict >= 0.3, 
                 svgcairo >= 0.12,
                 transformers >= 0.3,
                 unix >= 2.5,
                 unordered-containers, 
                 uuid >= 1.2 


  Exposed-Modules: 
                   Graphics.Hoodle.Render 
                   Graphics.Hoodle.Render.Background
                   Graphics.Hoodle.Render.Debug
                   Graphics.Hoodle.Render.Generic
                   Graphics.Hoodle.Render.Highlight
                   Graphics.Hoodle.Render.Item  
                   Graphics.Hoodle.Render.Primitive
                   Graphics.Hoodle.Render.Type 
                   Graphics.Hoodle.Render.Type.Background
                   Graphics.Hoodle.Render.Type.HitTest
                   Graphics.Hoodle.Render.Type.Hoodle
                   Graphics.Hoodle.Render.Type.Item
                   Graphics.Hoodle.Render.Type.RenderCache
                   Graphics.Hoodle.Render.Type.Renderer
                   Graphics.Hoodle.Render.Type.Select
                   Graphics.Hoodle.Render.Util
                   Graphics.Hoodle.Render.Util.HitTest
                   Hoodle.Util.Process

