Name:		hoodle-types
Version:	0.4
Synopsis:	Data types for programs for hoodle file format
Description: 	Hoodle file format data type including generic interface
License: 	BSD3
License-file:	LICENSE
Author:		Ian-Woo Kim
Maintainer: 	Ian-Woo Kim <ianwookim@gmail.com>
Category:       Data
Build-Type: 	Simple
Cabal-Version:  >= 1.8
data-files:     
Source-repository head
  type: git
  location: https://www.github.com/wavewave/hoodle-types


Library
  hs-source-dirs: src
  ghc-options: 	-Wall -funbox-strict-fields -fno-warn-unused-do-bind -fno-warn-orphans
  ghc-prof-options: -caf-all -auto-all
  Build-Depends: 
                   base == 4.*, 
                   aeson >= 0.8, 
                   bytestring >= 0.9, 
                   containers >= 0.4, 
                   cereal > 0.3, 
                   lens >= 2.5,
                   mtl > 2, 
                   strict > 0.3, 
                   text > 0.11,
                   uuid >= 1.2.6,
                   vector
  Exposed-Modules: 
                   Data.Hoodle.BBox
                   Data.Hoodle.Generic
                   Data.Hoodle.Hashed
                   Data.Hoodle.Predefined 
                   Data.Hoodle.Primitive 
                   Data.Hoodle.Select
                   Data.Hoodle.Simple
                   Data.Hoodle.Simple.V0_1_1
                   Data.Hoodle.Simple.V0_2_2
                   Data.Hoodle.Simple.V0_3
                   Data.Hoodle.Util
                   Data.Hoodle.Zipper 

  Other-Modules: 

 
		 