Name:		hoodle
Version:	0.5
Synopsis:	Executable for hoodle
Description: 	Hoodle is a pen notetaking program written in haskell. 
Homepage:       http://ianwookim.org/hoodle
License: 	GPL-3
License-file:	LICENSE
Author:		Ian-Woo Kim
Maintainer: 	Ian-Woo Kim <ianwookim@gmail.com>
Category:       Application
Tested-with:    GHC == 7.10
Build-Type: 	Custom
Cabal-Version:  >= 1.8
data-files:     CHANGES
Source-repository head
  type: git
  location: http://www.github.com/wavewave/hoodle

Flag Dyre
  Description:     dynamic reconfiguration support
  Default:         False


Executable hoodle
  Main-is: hoodle.hs
  hs-source-dirs: exe
  ghc-options: 	-Wall -threaded -funbox-strict-fields -fno-warn-unused-do-bind
  ghc-prof-options: -caf-all -auto-all
  Build-Depends: 
                 base == 4.*, 
                 cmdargs >= 0.7, 
                 hoodle-core >= 0.16 && < 0.17, 
                 hoodle 

Library
  hs-source-dirs: lib
  ghc-options: 	-Wall -funbox-strict-fields -fno-warn-unused-do-bind
  ghc-prof-options: -caf-all -auto-all
  Build-Depends:   base == 4.*, 
                   cmdargs >= 0.7,
                   configurator >= 0.2,
                   containers >= 0.4,
                   directory,
                   filepath, 
                   hoodle-core >= 0.16 && < 0.17,
                   mtl >= 2
  if flag(dyre)
    Build-depends:   dyre >= 0.8.11
   
  Exposed-Modules: 
                   Hoodle.ProgType
                   Hoodle.Job
                   Hoodle.Command 
                   Hoodle.StartUp
  Other-Modules: 
                   Paths_hoodle
  if flag(dyre)
    cpp-options: -DDYRE
