Name:		hoodle
Version:	1.0
Synopsis:	Executable for hoodle
Description: 	Hoodle is a pen notetaking program written in haskell.
Homepage:       http://ianwookim.org/hoodle
License: 	GPL-3
License-file:	LICENSE
Author:		Ian-Woo Kim
Maintainer: 	Ian-Woo Kim <ianwookim@gmail.com>
Category:       Application
Tested-with:    GHC == 8.6
Build-Type: 	Simple
Cabal-Version:  2.0
data-files:     CHANGES
Source-repository head
  type: git
  location: http://www.github.com/wavewave/hoodle

Executable hoodle
  Main-is: hoodle.hs
  hs-source-dirs: exe
  ghc-options: 	-Wall -Werror -threaded -rtsopts
  ghc-prof-options: -fprof-auto -fprof-cafs
  Build-Depends:
                 base == 4.*,
                 cmdargs >= 0.7,
                 hoodle-core,
                 hoodle

Library
  hs-source-dirs: lib
  ghc-options: 	-Wall -Werror
  ghc-prof-options: -fprof-auto -fprof-cafs
  Build-Depends:   base == 4.*,
                   cmdargs >= 0.7,
                   configurator >= 0.2,
                   containers >= 0.4,
                   directory,
                   dyre >= 0.8.11,
                   filepath,
                   hoodle-core,
                   mtl >= 2

  Exposed-Modules:
                   Hoodle.ProgType
                   Hoodle.Job
                   Hoodle.Command
                   Hoodle.StartUp
  Other-Modules:
                   Paths_hoodle
