Name:		hoodle-log
Version:	1.0
Synopsis:	logging
Description: 	logging
Homepage:       http://ianwookim.org/hoodle
License: 	MIT
License-file:	LICENSE
Author:		Ian-Woo Kim
Maintainer: 	Ian-Woo Kim <ianwookim@gmail.com>
Category:       Application
Tested-with:    GHC == 9.6
Build-Type: 	Simple
Cabal-Version:  2.0
data-files:     CHANGES
Source-repository head
  type: git
  location: http://www.github.com/wavewave/hoodle

Executable logcat
  Main-is:        Main.hs
  other-modules:  Util
  hs-source-dirs: app/logcat
  ghc-options: -j -Wall -Werror -threaded -rtsopts
  Build-Depends:
                  base == 4.*,
                  bytestring,
                  containers,
                  gi-cairo,
                  gi-cairo-connector >= 0.1.1,
                  gi-cairo-render >= 0.1.2,
                  gi-gtk,
                  gi-gtk-hs,
                  ghc-events,
                  haskell-gi-base,
                  lens > 5,
                  network,
                  pretty-simple

Executable testApp
  Main-is:        Main.hs
  hs-source-dirs: app/testApp
  c-sources:      app/testApp/cbit.c
  includes:       app/testApp/cbit.h
  ghc-options: 	  -Wall -Werror -threaded -rtsopts
  Build-Depends:
                  base == 4.*,
                  eventlog-socket,
                  gtk3,
                  transformers
